istio/vs-iam.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: iam
  namespace: demo
spec:
  gateways:
  - http-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /iam
    rewrite:
      uri: /
    route:
    - destination:
        host: iam
        port:
          number: 8080
